--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -38,7 +39,7 @@ img {
 
 body {
   overflow-x: hidden;
-  font-family: "Poppins", sans-serif;
+  font-family: "DM Sans", sans-serif;
   margin: 0;
   background-color: #e5e5ee;
 }
@@ -404,7 +405,8 @@ body {
   background-color: #fff;
   border-radius: 10px;
   padding: 22px 14px 13px 18px;
-  margin-left: 57%;
+  margin-left: 54%;
+  margin-top: -85px;
 }
 
 .testiminials_text {
