--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -36,7 +36,7 @@ html {
   
   body {
     overflow-x: hidden;
-    font-family: "Poppins", sans-serif;
+    font-family: "DM Sans", sans-serif;
     margin: 0;
     background-color: #e5e5ee;
   }
