--- a/scss/block/_testimonials.scss
+++ b/scss/block/_testimonials.scss
@@ -19,7 +19,8 @@ margin-bottom: 34px;
     background-color: #fff;
     border-radius:10px ;
     padding: 22px 14px 13px 18px;
-    margin-left: 57%;
+    margin-left: 54%;
+    margin-top: -85px;
 }
 .testiminials_text{
 font-weight: 400;
