--- a/scss/block/_block.scss
+++ b/scss/block/_block.scss
@@ -4,4 +4,6 @@
 @import "./offer";
 @import "./latest_project";
 @import  "./meet_our_team";
-@import "./testimonials"
+@import "./testimonials";
+@import "./contact_us";
+@import "./footer";
