new smart design

--- a/scss/block/_footer.scss
+++ b/scss/block/_footer.scss
@@ -56,7 +56,7 @@ color: #646464;
 }
 
 .footer_input {
-    padding: 12px 0 12px 20px;
+    padding: 12px 20px 12px 20px;
     width: 292px;
     border: none;
     border: 1.10px solid #e1e2e4;
